@@ -1,5 +1,7 @@
 *SVN*
 
+* Fixed double-singularization on scaffolded pagination call (Address would be turned into Addres) #1216, #1404 [nilsga]
+
 * Removed the require hack used by functional testing to work around an earlier bug in rake.
 
 * Allow distance_of_time_in_words to work with any value that responds to #to_time (like dates) #969
